--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,7 @@
     }
   },
   "cli": {
-    "analytics": "555db40b-831b-4974-8fa9-bef156f502cc"
+    "analytics": "555db40b-831b-4974-8fa9-bef156f502cc",
+    "packageManager": "npm"
   }
 }
